yaml/istio-2/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: blueorgreen-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueorgreen-fe
  strategy: {}
  template:
    metadata:
      labels:
        app: blueorgreen-fe
    spec:
      containers:
      - image: marygabry1508/s1p-2020-mesh-blueorgreenfrontend
        name: app
        resources: {}
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authgateway
  labels:
    app: blueorgreen-gw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueorgreen-gw
  strategy: {}
  template:
    metadata:
      labels:
        app: blueorgreen-gw
    spec:
      containers:
      - image: marygabry1508/s1p-2020-mesh-authgateway
        name: app
        resources: {}
        imagePullPolicy: Always
