yaml/istio-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blueorgreen-svc
  labels:
    app: blueorgreen-svc
spec:
  ports:
  - name: http-8080-8080-blueorgreen-svc
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blueorgreen-svc
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: blueorgreen-fe
  labels:
    app: blueorgreen-fe
spec:
  ports:
    - name: http-8080-8080-blueorgreen-fe
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: blueorgreen-fe
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: blueorgreen-gw
  labels:
    app: blueorgreen-gw
spec:
  ports:
  - name: http-8080-8080-blueorgreen-gw
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blueorgreen-gw
  type: ClusterIP
status:
  loadBalancer: {}
